[project]
name = "llm-proxy"
version = "0.1.0"
description = "Lightweight LLM proxy with OpenAI/Anthropic compatible interfaces"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "LLM Proxy Contributors" }]
keywords = ["llm", "proxy", "openai", "anthropic", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "aiosqlite>=0.20.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "httpx>=0.28.0"]

[project.scripts]
llm-proxy = "llm_proxy.cli:main"
llm-admin = "llm_proxy.admin_cli:main"

[project.urls]
Homepage = "https://github.com/openbot-coder/llm-proxy"
Repository = "https://github.com/openbot-coder/llm-proxy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_proxy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
